# python-wa-discord-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCTION_DEPLOYMENT.md  PRODUCTION_MAINTENANCE.md  README.md  debug_assignable_roles.py  main.py  pyproject.toml  ruff.toml  run-bot.py  serve_docs.py
.github/: dependabot.yml  security-exclusions.txt
.github/workflows/: ci.yml  docs.yml
bot/: weakauras_bot.py
commands/: config_commands.py  macro_commands.py  ping_commands.py  wiki_commands.py
discord-bot/: .coveragerc  TESTING_STRATEGY.md  coverage.xml  main.py
discord-bot/bot/: __init__.py  weakauras_bot.py
discord-bot/commands/: __init__.py  color_role_commands.py  config_commands.py  help_commands.py  macro_commands.py  ping_commands.py  stats_commands.py  wiki_commands.py
discord-bot/events/: temperature_event.py
discord-bot/modals/: __init__.py  embed_builder.py
discord-bot/services/: __init__.py  stats_service.py
discord-bot/settings/: token.yml.example
discord-bot/tests/: __init__.py  test_bot.py  test_color_role_commands.py  test_django_permissions.py  test_embed_macros.py  test_help_commands.py  test_macro_commands.py  test_macro_functionality.py  test_utils_logging.py
discord-bot/utils/: __init__.py  django_permissions.py  logging.py
discord-bot/views/: __init__.py  (+1 more)
docs/: DEPLOYMENT.md  conf.py  configuration.rst  development.rst  getting_started.rst  index.rst  requirements.txt
events/: __init__.py  temperature_event.py
settings/: token.yml.example
web/: .coveragerc  db.sqlite3  manage.py
(+76 files in other folders)
